@@ -11,7 +11,7 @@
 # Copyright (c) 2003-2006 Patrick Thoyts
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: rules.vc,v 1.14 2006/10/31 14:45:04 patthoyts Exp $
+# RCS: @(#) $Id: rules.vc,v 1.15 2007/02/04 00:10:54 mistachkin Exp $
 #------------------------------------------------------------------------------
 
 !ifndef _RULES_VC
@@ -51,12 +51,15 @@ CFG_ENCODING	= \"cp1252\"
 !if "$(OS)" == "Windows_NT"
 RMDIR	= rmdir /S /Q
 !if ![ver | find "4.0" > nul]
-CPY	= echo y | xcopy /i
+CPY	= echo y | xcopy /i >NUL
+COPY	= copy >NUL
 !else
 CPY	= xcopy /i /y >NUL
+COPY	= copy /y >NUL
 !endif
-!else
-CPY	= xcopy /i
+!else # "$(OS)" != "Windows_NT"
+CPY	= xcopy /i >_JUNK.OUT # On Win98 NUL does not work here.
+COPY	= copy >_JUNK.OUT # On Win98 NUL does not work here.
 RMDIR	= deltree /Y
 !endif
 MKDIR   = mkdir
