@@ -1,4 +1,4 @@
-/* $Id: ttkWinMonitor.c,v 1.6 2007/01/11 19:59:26 jenglish Exp $
+/* $Id: ttkWinMonitor.c,v 1.7 2007/02/04 00:10:55 mistachkin Exp $
  */
 
 #ifdef _MSC_VER
@@ -98,7 +98,11 @@ CreateThemeMonitorWindow(HINSTANCE hinst, Tcl_Interp *interp)
 	hwnd = CreateWindow( name, title, WS_OVERLAPPEDWINDOW,
 	    CW_USEDEFAULT, CW_USEDEFAULT, CW_USEDEFAULT, CW_USEDEFAULT,
 	    NULL, NULL, hinst, NULL );
+#ifdef _WIN64
 	SetWindowLongPtr(hwnd, GWLP_USERDATA, (LONG)interp);
+#else
+	SetWindowLong(hwnd, GWL_USERDATA, (LONG)interp);
+#endif
 	ShowWindow(hwnd, SW_HIDE);
 	UpdateWindow(hwnd);
     }
@@ -115,7 +119,11 @@ DestroyThemeMonitorWindow(void *clientData)
 static LRESULT WINAPI
 WndProc(HWND hwnd, UINT msg, WPARAM wp, LPARAM lp)
 {
+#ifdef _WIN64
     Tcl_Interp *interp = (Tcl_Interp *)GetWindowLongPtr(hwnd, GWLP_USERDATA);
+#else
+    Tcl_Interp *interp = (Tcl_Interp *)GetWindowLong(hwnd, GWL_USERDATA);
+#endif
     Ttk_Theme theme;
 
     switch (msg) {
